hphp/hack/test/typecheck/attributes/entry_point_locations.php.legacy_decl.exp
File "entry_point_locations.php", line 5, characters 5-16:
The `__EntryPoint` attribute cannot be used on a method. (Typing[4231])
